feat: refactor achievement checkers to streamline inventory event handling and add item conditions