@@ -2,10 +2,9 @@ package com.rcutanf.teamhunter.client.guide_sys.impl.checker;
 
 import com.rcutanf.teamhunter.client.guide_sys.AbstractGuideSysChecker;
 import com.rcutanf.teamhunter.client.guide_sys.TriggerType;
-import net.minecraft.item.ItemStack;
 import net.minecraft.util.Identifier;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
 
 /**
@@ -18,7 +17,10 @@ public class IsntItIronPickChecker extends AbstractGuideSysChecker {
 
     public IsntItIronPickChecker() {
         // 设置成就ID和使用物品栏触发器
-        super(Identifier.of("minecraft", "story/iron_tools"), "isnt_it_iron_pick", Arrays.asList(TriggerType.inventory));
+        super(Identifier.of("minecraft", "story/iron_tools"), "isnt_it_iron_pick",
+              List.of(TriggerType.inventory));
+        // 添加铁锭条件，权重为100（唯一条件）
+        conditions.add(new Condition("iron_ingot", "获取铁锭", 100));
     }
 
     @Override
@@ -27,23 +29,21 @@ public class IsntItIronPickChecker extends AbstractGuideSysChecker {
         if (isCompleted()) {
             return;
         }
-        // 将eventData转换为Map
-        @SuppressWarnings("unchecked")
-        Map<String, Object> data = (Map<String, Object>) eventData;
-        ItemStack itemStack = (ItemStack) data.get("itemStack");
-        boolean isAdded = (boolean) data.get("isAdded");
-        if (isAdded) {
-            // 检查传入的物品是否为铁锭
-            String itemId = itemStack.getItem().toString();
-            if (itemId.equals("minecraft:iron_ingot")) {
-                if(!isActive()){setActive(true);}
-                if(itemStack.getCount() / REQUIRED_IRON_INGOT_COUNT >= 1){
-                    setProgress(100);
-                }
-                else {
-                    setProgress(itemStack.getCount() * 100 / REQUIRED_IRON_INGOT_COUNT);
-                }
+
+        // 只处理物品栏事件
+        if (eventData instanceof Map) {
+            @SuppressWarnings("unchecked")
+            Map<String, Object> data = (Map<String, Object>) eventData;
+
+            // 确认是物品栏事件
+            if (data.containsKey("itemStack") && data.containsKey("isAdded")) {
+                handleInventoryEvent(data);
             }
         }
+    }
+
+    private boolean handleInventoryEvent(Map<String, Object> data) {
+        // 检查铁锭添加事件，需要3个铁锭
+        return checkCondition4itemAdd(data, "minecraft:iron_ingot", "iron_ingot", REQUIRED_IRON_INGOT_COUNT);
     }
 }
